# trading_bot_api_manager

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cb_client/: coinbase_api_client.rs  coinbase_ws_client.rs  mod.rs
src/client/: mod.rs
src/state/: mod.rs
src/ws/: mod.rs
