[package]
name = "trading_bot_api_manager"
version = "0.1.0"
authors = ["Derek Foundoulis <derek@foundoulis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.1.1", features = ["full"] }
tokio-serde-json = "0.3.0"
coinbase-pro-rs = "0.6.9"
futures="^0.3.8"
futures-util="^0.3.8"
