[package]
name = "trading_bot_api_manager"
version = "0.1.0"
authors = ["Derek Foundoulis <derek@foundoulis.io>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.1.1", features = ["full"] }
tokio-serde-json = "0.3.0"
coinbase-pro-rs = "0.6.9"
futures="^0.3.8"
ordered-float = "2.0"
num-traits = "0.2"
